<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">mobiliteamdhiwisever</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_continue">continue</string>
<string name="lbl_last_name2">Last Name</string>
<string name="msg_an_identity_cri">an identity crisis? You can recover your username using the email address </string>
<string name="lbl_thank_you">Thank
 you!</string>
<string name="msg_your_login_deta">your login details</string>
<string name="lbl_logout">Logout</string>
<string name="lbl_wwf">wwf</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
<string name="msg_delays_5_min">Delays (5 min)
Overcrowded transits (n.2)</string>
<string name="lbl_email_address">Email Address:   </string>
<string name="lbl_donate">Donate</string>
<string name="lbl_wwf2">WWF</string>
<string name="lbl_stats">Stats</string>
<string name="lbl_last_name3">Last Name: </string>
<string name="lbl_from_verano">From: Verano</string>
<string name="lbl_recent_routes">recent routes</string>
<string name="lbl_first_name">First Name</string>
<string name="lbl_542">542</string>
<string name="msg_username_recove">Username Recover</string>
<string name="msg_enter_the_amoun">Enter the amount of credits to donate here!</string>
<string name="lbl_first_name2">First Name: </string>
<string name="lbl_email2">email</string>
<string name="msg_ippocrate_provi">Ippocrate/Provincie</string>
<string name="lbl_log_in">Log In</string>
<string name="lbl_3l">3L</string>
<string name="lbl_verano_bologna">Verano-Bologna</string>
<string name="msg_suggested_route">SUGGESTED ROUTES :</string>
<string name="msg_available_credi">Available Credits: 50
</string>
<string name="lbl_forgot">Forgot </string>
<string name="lbl_giuliomaps">GiulioMaps</string>
<string name="lbl_donations">Donations</string>
<string name="lbl_15_min">15 min</string>
<string name="lbl_stops">stops</string>
<string name="lbl_verano">Verano</string>
<string name="lbl_username">Username</string>
<string name="lbl">\?</string>
<string name="lbl_register">register</string>
<string name="lbl_verano_12_30">Verano - 12:30</string>
<string name="lbl_submit">Submit</string>
<string name="lbl_select">select</string>
<string name="msg_regina_elena_v">Regina Elena/V.le Università - 12:37</string>
<string name="msg_ippocrate_macch">Ippocrate/Macchiafave</string>
<string name="lbl_overcrowded2">Overcrowded</string>
<string name="msg_forgot_your_log">Forgot your login details?</string>
<string name="lbl_3_credits">(+3 credits)</string>
<string name="lbl_register_here">Register here</string>
<string name="lbl_email">Email </string>
<string name="lbl_from">From:</string>
<string name="lbl_to">To:</string>
<string name="lbl_mobiliteam">MobiliTeam</string>
<string name="lbl_last_name">Last Name </string>
<string name="msg_ippocrate_march">Ippocrate/Marchiafava</string>
<string name="lbl_12_30_12_45">12:30 - 12:45                              </string>
<string name="msg_bologna_12_4">Bologna -  12:45</string>
<string name="lbl_max_50">max = 50</string>
<string name="msg_wwf_works_to_he2">WWF works to help local communities conserve the natural resources they depend upon; transform markets and policies toward sustainability; and protect and restore species and their habitats. Our efforts ensure that the value of nature is reflected in decision-making from a local to a global scale.</string>
<string name="lbl_where_you_left">WHERE YOU LEFT</string>
<string name="lbl_giulio">Giulio </string>
<string name="lbl_mobiliteam2">  MobiliTeam</string>
<string name="lbl_end_route">End Route</string>
<string name="lbl_12_30_12_452">12:30 - 12:45</string>
<string name="msg_total_donations">Total Donations: 1 </string>
<string name="lbl_boarded">Boarded</string>
<string name="msg_giulio_lombardi">giulio.lombardi@gmail.com</string>
<string name="msg_regina_elena_v2">Regina Elena/V.le Università - 12:40</string>
<string name="lbl_delays_1_min">Delays (1 min)</string>
<string name="msg_to_piazza_bolo">To: Piazza Bologna</string>
<string name="msg_regina_elena_v3">Regina Elena/V.le Università</string>
<string name="msg_works_to_help_l"> works to help local communities conserve the natural resources they depend upon; transform markets and policies toward sustainability...</string>
<string name="lbl_having">Having </string>
<string name="lbl_or">or</string>
<string name="msg_wwf_works_to_he">WWF works to help local communities conserve the natural resources they depend upon; transform markets and policies toward sustainability...</string>
<string name="lbl_12_30_12_50">12:30 - 12:50                              </string>
<string name="lbl_310">310</string>
<string name="msg_total_reports">Total Reports: 10</string>
<string name="lbl_community_based">community based</string>
<string name="msg_current_credits">Current Credits: 50</string>
<string name="lbl_lombardi">Lombardi</string>
<string name="msg_searching_route">Searching Routes</string>
<string name="lbl_overcrowded">overcrowded</string>
<string name="lbl_bologna">Bologna</string>
<string name="lbl_personal_info">Personal Info</string>
<string name="lbl_1_credit">(+1 credit)</string>
<string name="msg_having_an_ident">Having an identity crisis? You can recover your username using the email address </string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
</resources>
