<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileVM" type="com.mobiliteamdhiwisever.app.modules.profile.data.viewmodel.ProfileVM"/>
    </data>
    <ScrollView android:clipToPadding="false"
        android:fillViewport="true"
        android:id="@+id/scrollViewScrollview"
        android:layout_height="match_parent" android:layout_width="match_parent">
        <LinearLayout android:id="@+id/linearColumnmaleuser"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowmaleuser"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMaleUser"
                    android:layout_height="@dimen/_99pxh"
                    android:layout_width="@dimen/_102pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_maleuser}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_maleuser"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGiulioMaps"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_64pxv"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtGiulioMaps}"
                    style="@style/txtRobotoromanbold20" tools:text="@string/lbl_giuliomaps"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCurrentCredits"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.0" android:singleLine="true"
                android:text="@{profileVM.profileModel.txtCurrentCredits}"
                style="@style/txtRobotoromanbold15" tools:text="@string/msg_current_credits"/>
            <View android:background="@color/black_900"
                android:id="@+id/lineLineFifteen"
                android:layout_gravity="start"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_13pxv" android:layout_width="@dimen/_332pxh"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPersonalInfo"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.0" android:singleLine="true"
                android:text="@{profileVM.profileModel.txtPersonalInfo}"
                style="@style/txtRobotoromanbold20" tools:text="@string/lbl_personal_info"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.67"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtLanguage}"
                    style="@style/txtRobotoromanbold14" tools:text="@string/lbl_first_name2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_weight="0.33"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtLanguageOne}"
                    style="@style/txtRobotoromanbold14" tools:text="@string/lbl_giulio"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguageTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.55"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtLanguageTwo}"
                    style="@style/txtRobotoromanbold14" tools:text="@string/lbl_last_name3"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLombardi"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_43pxh"
                    android:layout_weight="0.45"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtLombardi}"
                    style="@style/txtRobotoromanmedium14" tools:text="@string/lbl_lombardi"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguageThree"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageThree"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.35"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtLanguageThree}"
                    style="@style/txtRobotoromanbold14" tools:text="@string/lbl_email_address"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.65"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtEmail}"
                    style="@style/txtRobotomedium14" tools:text="@string/msg_giulio_lombardi"/>
            </LinearLayout>
            <View android:background="@color/black_900"
                android:id="@+id/lineLineThirteen"
                android:layout_gravity="start"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_14pxv" android:layout_width="@dimen/_332pxh"/>
            <TextView android:ellipsize="end" android:id="@+id/txtStats"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.0" android:singleLine="true"
                android:text="@{profileVM.profileModel.txtStats}"
                style="@style/txtRobotoromanbold24" tools:text="@string/lbl_stats"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTotalReports"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.0" android:singleLine="true"
                android:text="@{profileVM.profileModel.txtTotalReports}"
                style="@style/txtRobotoromanbold14" tools:text="@string/msg_total_reports"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguageFour"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.0" android:singleLine="true"
                android:text="@{profileVM.profileModel.txtLanguageFour}"
                style="@style/txtRobotoromanbold14" tools:text="@string/msg_total_donations"/>
            <View android:background="@color/black_900"
                android:id="@+id/lineLineFourteen"
                android:layout_gravity="start"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_332pxh"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowminimize"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMinimize"
                    android:layout_height="@dimen/_36pxh"
                    android:layout_width="@dimen/_28pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_minimize"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_minimize"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLogout"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.62"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:singleLine="true"
                    android:text="@{profileVM.profileModel.txtLogout}"
                    style="@style/txtRobotoromanbold14_1" tools:text="@string/lbl_logout"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
