<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.mobiliteamdhiwisever.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearLOGIN"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <ImageView android:id="@+id/imageLogoappTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_126pxh"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_129pxv"
            android:layout_width="@dimen/_124pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_logoapp1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_logoapp1"/>
        <LinearLayout android:id="@+id/linearColumnlanguage"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_184pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_width="wrap_content"
                android:letterSpacing="0.0" android:singleLine="true"
                android:text="@{loginVM.loginModel.txtLanguage}"
                style="@style/txtRobotomedium20" tools:text="@string/lbl_mobiliteam2"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_8"
                android:ellipsize="end"
                android:hint="@string/lbl_username"
                android:id="@+id/etTextfield" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_33pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@={loginVM.loginModel.etTextfieldValue}"
                android:textColorHint="@color/black_900_87"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtForgotyourlog"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtForgotyourlog}"
                style="@style/txtRobotoromansemibold16" tools:text="@string/msg_forgot_your_log"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLogIn"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_37pxh"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_log_in"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_log_in"/>
            <TextView android:ellipsize="end" android:id="@+id/txtOr"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtOr}"
                style="@style/txtRobotomedium20" tools:text="@string/lbl_or"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowconfirmation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtConfirmation"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.63"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtConfirmation}"
                    style="@style/txtRobotomedium16" tools:text="@string/msg_don_t_have_an_a"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRegisterhere"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.37"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtRegisterhere}"
                    style="@style/txtRobotomedium16_1" tools:text="@string/lbl_register_here"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
