<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerVM" type="com.mobiliteamdhiwisever.app.modules.register.data.viewmodel.RegisterVM"/>
    </data>
    <LinearLayout android:id="@+id/linearREGISTER"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <ImageView android:id="@+id/imageBack"
            android:layout_gravity="start"
            android:layout_height="@dimen/_47pxh"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_width="@dimen/_60pxh"
            android:scaleType="fitXY" android:src="@drawable/img_back"
            tools:ignore="ContentDescription" tools:src="@drawable/img_back"/>
        <TextView android:ellipsize="end" android:id="@+id/txtRegister"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.0" android:singleLine="true"
            android:text="@{registerVM.registerModel.txtRegister}"
            style="@style/txtRobotomedium30" tools:text="@string/lbl_register"/>
        <TextView android:ellipsize="end" android:id="@+id/txtUsername"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_72pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.0" android:singleLine="true"
            android:text="@{registerVM.registerModel.txtUsername}"
            style="@style/txtRobotomedium16" tools:text="@string/lbl_username"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_username"
            android:id="@+id/etTextfield" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etTextfieldValue}"
            android:textColorHint="@color/black_900_87"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFirstName"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.0" android:singleLine="true"
            android:text="@{registerVM.registerModel.txtFirstName}"
            style="@style/txtRobotomedium16" tools:text="@string/lbl_first_name"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_first_name"
            android:id="@+id/etTextfieldOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etTextfieldOneValue}"
            android:textColorHint="@color/black_900_87"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLanguage"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.0" android:singleLine="true"
            android:text="@{registerVM.registerModel.txtLanguage}"
            style="@style/txtRobotomedium16" tools:text="@string/lbl_last_name"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_last_name2"
            android:id="@+id/etTextfieldTwo" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etTextfieldTwoValue}"
            android:textColorHint="@color/black_900_87"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLanguageOne"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.0" android:singleLine="true"
            android:text="@{registerVM.registerModel.txtLanguageOne}"
            style="@style/txtRobotomedium16" tools:text="@string/lbl_email"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_email2"
            android:id="@+id/etTextfieldThree"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={registerVM.registerModel.etTextfieldThreeValue}"
            android:textColorHint="@color/black_900_87"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSubmit"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_52pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="@dimen/_239pxh"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/lbl_submit"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_submit"/>
    </LinearLayout>
</layout>
